--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,25 +2,47 @@
 
 <html>
 <head>
-	<title>My HCI Friends</title>	
+	<title>Find A Friend!</title>
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1>My HCI Friends</h1>
+	<div class="container">
+		<h1>My HCI Friends</h1>
 
-	<form id="addFriendForm" role="form" method="get" action="/add">
-		<h3>Add a friend</h3>
-	    <div class="form-group">
-	      <label for="name">Name:</label>
-	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-	    </div>
-	    <div class="form-group">
-	      <label for="description">Description:</label>
-	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-	</form>
+		{{#each friends}}
+		<div class="friends">
+
+			<h3><a href="#" class="friend-name">{{name}}</a></h3>
+
+			<img src="{{imageURL}}" alt="friend pic" class="img-responsive">
+			<p>{{description}}</p>
+		</div>
+ 	{{/each}}
+
+
+		<form id="addFriendForm" role="form" method="get" action="/add">
+			<h3>Add a friend</h3>
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" class="form-control" id="name" placeholder="Name" name="name">
+			</div>
+			<div class="form-group">
+				<label for="description">Description:</label>
+				<input type="text" class="form-control" id="description" placeholder="Description" name="description">
+			</div>
+			<input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+		</form>
+
+		<script src="/js/jquery-1.11.0.js"></script>
+		<script src="/js/bootstrap.js"></script>
+		<script src="/js/hci-friends.js"></script>
+	</div>
 </body>
 </html>
